--- a/ecommerce/store/templates/user/my_orders.html
+++ b/ecommerce/store/templates/user/my_orders.html
@@ -3,24 +3,55 @@
 
 {% block body %}
 
-<h3>My Orders</h3>
-<a href="{% url 'profile' %}">My Account</a>
+<main class="principal">
+    <section class="conta">
+        <div class="conta__container">
 
-{% for order in orders %}
-<div style="display: flex;">
-    <p>Date: {{ order.purchase_date }}</p>>
-    <p>Order ID: {{ order.id }}</p>
-    <p>transaction_code: {{ order.transaction_code }}</p>
-    <p>Price: {{ order.total_price }}</p>
-    <p>Address: {{ order.address.cep }}, {{ order.address.street }} / {{ order.address.city }}-{{ order.address.state }}</p>
-    {% for item in pedido.itens %}
-        <img src="{{ item.item_estoque.produto.imagem.url }}" width="50" height="75">
-        <p>Produto: {{ item.item_estoque.produto.nome }}</p>
-        <p>Quantidade: {{ item.quantidade }}</p>
-        <p>Preço: {{ item.preco_total }}</p>
-    {% endfor %}
-</div>
-<hr>
-{% endfor %}
+            <div class="checkout__titulos">
+                <p class="checkout__titulo">My Orders</p>
+            </div>
+
+            {% for order in orders %}
+            <div class="pedido">
+                <div class="pedido__cabecalho">
+                    <div>
+                        <p><b>Data:</b>{{ order.purchase_date }}</p>
+                        <p><b>Address:</b> {{ order.address.street }}, {{order.address.number}} - {{ order.address.city }}-{{ order.address.state }} - {{ order.address.cep }}</p>
+                    </div>
+
+                    <div>
+                        <p><b>Total</b></p>
+                        <p>{{ order.total_price }}</p>
+                    </div>
+
+                    <div>
+                        <p><b>Order Number:</b></p>
+                        <p>{{ order.id }}</p> 
+                        <p><b>Transaction Code:</b></p>
+                        <p>{{ order.transaction_code }}</p>
+                    </div>
+                </div>
+
+                <div class="pedido__corpo">
+                    {% for item in order.order_itens %}
+                    <div class="tabela__imagem">
+                        <img
+                        src="{{ item.stockitem.product.image.url }}"
+                        alt="{{ item.stockitem.product.name }}"
+                        />
+                    </div>
+                    <div class="tabela__produto-textos">
+                        <p><b>{{ item.stockitem.product.name }}</b></p>
+                        <p><b>Quant:</b> {{ item.quant }}</p>
+                        <p><b>Price:</b> {{ item.total_price}}</p>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+            {% endfor %}
+
+        </div>
+    </section>
+  </main>
 
 {% endblock %}
