--- a/ecommerce/store/templates/checkout.html
+++ b/ecommerce/store/templates/checkout.html
@@ -4,48 +4,110 @@
 
 {% block body %}
 
-<h3> CHECKOUT </h3>
-<a href="{% url 'cart' %}">Back to Cart</a>
+<main class="principal">
+    <section class="secao-checkout">
+        <a href="{% url 'cart' %}" class="checkout__botao">Back to Cart</a>
 
-<h4> Order Number: {{ order_number.id }}</h4>
-<p> Total Quantity Itens: {{ quant_cart_itens }} </p>
-<p> Total Price: R$ {{ order_number.total_price }} </p>
+        <p> Order Number: {{ order_number.id }}</p>
+        {% if error %}
+            <h4>{{error}}</h4>
+        {% endif %}
 
-{% if error %}
-    <h4>{{error}}</h4>
-{% endif %}
+        <div class="checkout">
+            <form class="checkout__form"  method="post" action="{% url 'payment_start' order_number.id %}">
+                
+                {% csrf_token %}
+               
+                <div class="checkout__secao-entrega-login checkout__secao-entrega-login--logado">
+                    <div class="checkout__secao-login">
+                        <div class="checkout__titulos">
+                            <p class="checkout__titulo">Identifique-se</p>
+                        </div>
 
-<form method="post" action="{% url 'payment_start' order_number.id %}">
-    {% csrf_token %}
+                        <div class="checkout__endereco-item">
+                            <label for="email">E-mail</label>
+                            <input name="email" type="email" />
+                        </div>
+                    </div>
 
-    <h3>chose one Address: </h3>
+                    <div class="checkout__secao-entrega">
+                        <div class="checkout__titulos">
+                            <p class="checkout__titulo">Chose one Address:</p>
+                        </div>
 
-    <a href="{% url 'new_address' %}">Add New Address</a><br>
+                        <div class="checkout__endereco-cadastrado">
+                            
+                            {% for each_address in all_address %}
+                            <div class="checkout__pagamento-item">
+                                <input type="radio" name="address" value="{{ each_address.id }}" />
+                                <label for="{{ each_address.id }}"> <b>{{ each_address.description }}</b> /
+                                    {{ each_address.street }}, {{ each_address.number }} - 
+                                    {{ each_address.complement }} - 
+                                    {{ each_address.city }}-{{ each_address.state }} - 
+                                    {{ each_address.cep }} - {{ each_address.country }}
+                                </label>
+                            </div>
+                            {% endfor %}   
 
-    {% for each_address in all_address %}
-        <input type="radio" name="address" value="{{ each_address.id }}">
-        <label for="{{ each_address.id }}">{{ each_address.description }} / 
-            {{ each_address.street }},{{ each_address.number }} - 
-            {{ each_address.complement }} - 
-            {{ each_address.city }}-{{ each_address.state }} - 
-            {{ each_address.cep }} - {{ each_address.country }}
-        </label>
-        <br>
-    {% endfor %}
+                        </div>
 
+                        <a type="button" href="{% url 'new_address' %}" class="checkout__botao checkout__botao--entrega">
+                            Add New Address
+                        </a>
 
-    {% if not request.user.is_authenticated %}
-        <hr>
-        <h4>Enter your e-mail in order to finish the precess: </h4>
-        <input type="email" name="email" placeholder="e-mail">
-    {% endif %}
-        
-    <hr>
-    <input type="hidden" value="{{ order_number.id }}" name="order_number">
-    <input type="hidden" value="{{ order_number.total_price }}" name="total">
-    <button type="submit">Finish Order - R$ {{order_number.total_price}}</button>
+                    </div>
+                </div>
 
-</form>
+                <div class="checkout__secao-pagamento-infos">
+                    <div class="checkout__secao-pagamento">
+                        <div class="checkout__titulos">
+                            <p class="checkout__titulo">Formas de Pagamento</p>
+                        </div>
 
+                        <div class="checkout__pagamento-formas">
+                            <div class="checkout__pagamento-item">
+                                <input type="radio" name="forma_pagamento" value="cartao_credito"/>
+                                <label for="cartao_credito">Cartão de Crédito</label>
+                            </div>
+
+                            <div class="checkout__pagamento-item">
+                                <input type="radio" name="forma_pagamento" value="boleto" />
+                                <label for="boleto">Boleto</label>
+                            </div>
+
+                            <div class="checkout__pagamento-item">
+                                <input type="radio" name="forma_pagamento" value="pix" />
+                                <label for="pix">PIX</label>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="checkout__secao-infos">
+                        <div class="checkout__titulos checkout__titulos--mb">
+                            <p class="checkout__titulo">Summary</p>
+                        </div>
+
+                        <div class="subtotal__infos">
+                            <p>Total Quantity Itens:</p>
+                            <p>{{ quant_cart_itens }}</p>
+                        </div>
+
+                        <div class="subtotal__infos subtotal__infos--sborda">
+                            <p>Total</p>
+                            <p>{{ order_number.total_price }}</p>
+                        </div>
+
+                        <input type="hidden" value="{{ order_number.id }}" name="order_number">
+                        <input type="hidden" value="{{ order_number.total_price }}" name="total">
+
+                        <button class="subtotal__botao" type="submit">Finish Order</button>
+
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+  </main>
 
 {% endblock %}
